--- a/fastxml.html
+++ b/fastxml.html
@@ -1,12 +1,12 @@
 
 <script type="text/html" data-template-name="fastxml">
     <div class="form-row">
-        <label for="node-input-property"><i class="fa fa-ellipsis-h"></i> <span data-i18n="node-red:common.label.property"></span></label>
-        <input type="text" id="node-input-property" style="width:70%;"/>
+        <label for="node-input-name" style="width:120px;"><i class="fa fa-tag"></i> <span data-i18n="node-red:common.label.name"></span></label>
+        <input type="text" id="node-input-name" data-i18n="[placeholder]node-red:common.label.name">
     </div>
     <div class="form-row">
-        <label for="node-input-name"><i class="fa fa-tag"></i> <span data-i18n="node-red:common.label.name"></span></label>
-        <input type="text" id="node-input-name" data-i18n="[placeholder]node-red:common.label.name">
+        <label for="node-input-property" style="width:120px;"><i class="fa fa-ellipsis-h"></i> Input Property</label>
+        <input type="text" id="node-input-property" style="width:70%;"/>
     </div>
     <hr align="middle"/>
     <div class="form-row">
@@ -18,6 +18,11 @@
     <div class="form-row" style="padding-left: 20px;">
         <label style="width:250px;" for="node-input-chr" data-i18n="node-red:xml.label.prefix"></label> <input type="text" id="node-input-chr" style="width:32%">
     </div>
+    <hr align="middle"/>
+    <div class="form-row">
+        <label for="node-input-outproperty" style="width:120px;"><i class="fa fa-ellipsis-h"></i> Output Property</label>
+        <input type="text" id="node-input-outproperty" style="width:70%;"/>
+    </div>
 </script>
 
 <script type="text/javascript">
@@ -27,6 +32,7 @@
         defaults: {
             name: {value:""},
             property: {value:"payload",required:true},
+            outproperty: {value:"payload",required:true},
             attr: {value:""},
             chr: {value:"_"}
         },
@@ -43,7 +49,11 @@
             if (this.property === undefined) {
                 $("#node-input-property").val("payload");
             }
+            if (this.outproperty === undefined) {
+                $("#node-input-outproperty").val($("#node-input-property").val());
+            }
             $("#node-input-property").typedInput({default:'msg',types:['msg']});
+            $("#node-input-outproperty").typedInput({default:'msg',types:['msg']});
         }
     });
 </script>
